# pancake

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  Makefile  README.md  doxygen.conf  example.cpp
Pancake/: Assets.cpp  Assets.h  BaseGame.cpp  BaseGame.h  Button.h  CMakeLists.txt  Camera.cpp  Camera.h  Cleanup.h  Color.cpp  Color.h  Constants.h  Emitter.cpp  Emitter.h  Interface.h  Interpolate.cpp  Interpolate.h  Keyboard.cpp  Keyboard.h  Log.cpp  Log.h  Matrix.cpp  Matrix.h  Menu.cpp  Menu.h  MenuItem.cpp  MenuItem.h  Noise.cpp  Noise.h  OpenGL.cpp  OpenGL.h  PPM.cpp  PPM.h  Painter.cpp  Painter.h  PainterState.cpp  PainterState.h  Random.cpp  Random.h  Rect.cpp  (+26 more)
Pancake/Game/: Assets.cpp  Assets.h  BaseGame.cpp  BaseGame.h  CMakeLists.txt  Camera.cpp  Camera.h  Cleanup.h  Constants.h  File.h  Keyboard.cpp  Keyboard.h  Log.cpp  Log.h  MapReader.cpp  MapReader.h  ProfilerSample.cpp  ProfilerSample.h  ResourcePath.h  Screen.h  Settings.h  StringHelper.cpp  StringHelper.h  Timer.cpp  Timer.h
Pancake/Graphic/: CMakeLists.txt  Color.cpp  Color.h  Font.cpp  Font.h  Image.h  Line.h  Mesh.cpp  Mesh.h  OpenGL.cpp  OpenGL.h  PPM.cpp  PPM.h  Painter.cpp  Painter.h  PainterState.cpp  PainterState.h  Polygon.cpp  Polygon.h  Quad.cpp  Quad.h  Renderable.cpp  Renderable.h  Shader.cpp  Shader.h  SubTextureShader.cpp  SubTextureShader.h  Text.cpp  Text.h  Texture.cpp  Texture.h  TextureShader.cpp  TextureShader.h  Triangle.cpp  Triangle.h  stb_image.h  stb_image_write.h
Pancake/Math/: Animation.h  CMakeLists.txt  Interpolate.cpp  Interpolate.h  Matrix.cpp  Matrix.h  Noise.cpp  Random.cpp  Random.h  Rect.cpp  Rect.h  Vector2.cpp  Vector2.h
Pancake/Particle/: CMakeLists.txt  Emitter.cpp  Emitter.h
Pancake/UI/: Button.h  CMakeLists.txt  Interface.h  Menu.cpp  Menu.h  MenuItem.cpp  MenuItem.h  Widget.h  imgui.cpp  imgui_draw.cpp  imgui_internal.h  stb_image_resize.h  stb_rect_pack.h  stb_truetype.h
cmake/: FindPancake.cmake
include/: Cleanup.h  Game.h  Log.h  Map.h  MapLoader.h  MapRenderer.h  Noise.h  Pancake.h  ResourcePath.h  StringHelper.h  TextureAtlas.h
include/Game/: Assets.h  Camera.h  Game.h  Keyboard.h  Screen.h  Timer.h
include/Graphics/: Color.h  OpenGL.h  Painter.h  PainterState.h  Shader.h  Texture.h
include/Images/: PPM.h
include/Math/: Interpolate.h  Math.h  Matrix.h  Rect.h  Vector2.h
include/Menu/: Menu.h  MenuItem.h
include/Particles/: Emitter.h
include/UI/: UI.h  Widget.h
src/: Game.cpp  Log.cpp  Map.cpp  MapLoader.cpp  MapRenderer.cpp  Noise.cpp  Pancake.cpp  StringHelper.cpp  TextureAtlas.cpp
src/Game/: Assets.cpp  Camera.cpp  Game.cpp  Keyboard.cpp  Screen.cpp  Timer.cpp
src/Graphics/: Color.cpp  OpenGL.cpp  Painter.cpp  PainterState.cpp  Shader.cpp  Texture.cpp
src/ImGui/: imgui.cpp  imgui_demo.cpp  imgui_draw.cpp
src/Images/: PPM.cpp
src/Math/: Interpolate.cpp  Matrix.cpp  Random.cpp  Rect.cpp  Vector2.cpp
src/Menu/: Menu.cpp  MenuItem.cpp  imgui_impl_sdl_gl3.cpp
src/Particles/: Emitter.cpp
src/UI/: UI.cpp
