PROJECT(pancake)
CMAKE_MINIMUM_REQUIRED(VERSION 3.6)
SET(CMAKE_BUILD_TYPE Debug)
SET(CMAKE_CXX_STANDARD 11)
SET(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake")

FIND_PACKAGE(GLM REQUIRED)
FIND_PACKAGE(OpenGL REQUIRED)
FIND_PACKAGE(GLEW REQUIRED)
FIND_PACKAGE(SDL2 REQUIRED)
FIND_PACKAGE(SDL2_image REQUIRED)
FIND_PACKAGE(SDL2_mixer REQUIRED)

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})
INCLUDE_DIRECTORIES(${GLM_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${OPENGL_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${GLEW_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${SDL_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${SDL2_IMAGE_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${SDLMIXER_INCLUDE_DIR})

INCLUDE_DIRECTORIES(libs/json/src)

MESSAGE("SDL: ${SDL2_INCLUDE_DIR}")
MESSAGE("GL: ${OPENGL_INCLUDE_DIR}")
MESSAGE("GLEW: ${GLEW_INCLUDE_DIR}")

FILE(GLOB_RECURSE HEADERS
        Pancake/*.h
        )

FILE(GLOB_RECURSE SOURCES
        Pancake/*.cpp
        )

MESSAGE("[PANCAKE] Sources ${SOURCES}")

set(PANCAKE_HEADER ${HEADERS} CACHE INTERNAL "")
set(PANCAKE_SOURCE ${SOURCES} CACHE INTERNAL "")

ADD_LIBRARY(pancake STATIC ${SOURCES})

ADD_EXECUTABLE(pancake_example example.cpp ${SOURCES})

TARGET_LINK_LIBRARIES(pancake_example
        ${GLEW_LIBRARY_RELEASE}
        ${OPENGL_LIBRARY}
        ${SDL2_LIBRARY}
        ${SDL2_IMAGE_LIBRARY}
        ${SDL2GFX_LIBRARY}
        ${SDLMIXER_LIBRARIES})

ADD_SUBDIRECTORY(Pancake)

#INSTALL(TARGETS pancake DESTINATION "lib")
#INSTALL(DIRECTORY include/ DESTINATION "include/Pancake")
#INSTALL(FILES ${IMGUI_HEADER} DESTINATION "include/Pancake/UI")